<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ITindr</string>
    <string name="initial_screen_text">Ты найдешь того,\nкто поревьюит твой код</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="register">Регистрация</string>
    <string name="login">Вход</string>
    <string name="back">Назад</string>
    <string name="email">Email</string>
    <string name="your_email">Ваш email</string>
    <string name="password">Пароль</string>
    <string name="your_password">Ваш пароль</string>
    <string name="invent_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="about_yourself">О себе</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="change_photo">Изменить фото</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="your_photo">Ваше фото</string>
    <string name="name">Имя</string>
    <string name="your_name">Ваше имя</string>
    <string name="describe_yourself">Опишите себя</string>
    <string name="specify_interests">Укажи интересы</string>
    <string name="python">Python</string>
    <string name="django">Django</string>
    <string name="rest">REST</string>
    <string name="swift">Swift</string>
    <string name="obj_c">Obj-C</string>
    <string name="react_js">React JS</string>
    <string name="kotlin">Kotlin</string>
    <string name="git">Git</string>
    <string name="unity">Unity</string>
    <string name="net">.NET</string>
    <string name="sql">SQL</string>
    <string name="clean_architecture">Clean Architecture</string>
    <string name="uml">UML</string>
    <string name="save">Сохранить</string>
    <string name="background">Задний фон</string>
    <string name="heart">Сердце</string>
    <string name="logo">Логотип</string>
    <string name="stream">Поток</string>
    <string name="people">Люди</string>
    <string name="chats">Чаты</string>
    <string name="profile">Профиль</string>
    <string name="andrey">Андрей</string>
    <string name="message">И обидно вам должно быть за себя раз вы не видите как Яго</string>
    <string name="person_load_error">Ошибка загрузки пользователя</string>
</resources>