<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gradient_background" />

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/register"
        android:text="@string/register"
        android:focusable="false"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_regular"
        android:textFontWeight="700"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/your_email"
        android:text="@string/email"
        android:focusable="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_regular"
        android:textFontWeight="700"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"/>

    <EditText
        android:id="@+id/your_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/white_transparent_shape_background_8r"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white_light_transparent"
        android:textSize="16sp"
        android:textFontWeight="400"
        android:paddingTop="14dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:focusable="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_regular"
        android:textFontWeight="700"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_email"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"/>

    <EditText
        android:id="@+id/invent_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:background="@drawable/white_transparent_shape_background_8r"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/invent_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white_light_transparent"
        android:textSize="16sp"
        android:textFontWeight="400"
        android:paddingTop="14dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize"/>

    <TextView
        android:id="@+id/repeat_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/repeat_password"
        android:text="@string/repeat_password"
        android:focusable="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_regular"
        android:textFontWeight="700"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invent_password"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"/>

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:background="@drawable/white_transparent_shape_background_8r"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white_light_transparent"
        android:textSize="16sp"
        android:textFontWeight="400"
        android:paddingTop="14dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize"/>

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/sign_up"
        android:background="@drawable/white_shape_background"
        android:clickable="true"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:contentDescription="@string/back"
        android:background="@drawable/white_transparent_shape_background"
        android:clickable="true"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>