<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/initial_screen_background_1" />

    <ImageView
        android:id="@+id/itindr_image_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="123dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/itindr_text" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@drawable/heart" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_screen_text"
        android:focusable="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_regular"
        android:textFontWeight="700"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itindr_image_text"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_shape_background"
        android:clickable="true"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/white_transparent_shape_background"
        android:clickable="true"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>