<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gradient_background" />

    <TextView
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/white_shape_background"
        android:clickable="true"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/about_yourself_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_yourself"
                android:focusable="false"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="60dp"
                android:layout_marginStart="24dp"/>

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/your_photo"
                android:background="@drawable/white_transparent_shape_background_24r"
                android:clickable="true"
                android:padding="28dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_yourself_header" />

            <TextView
                android:id="@+id/change_photo"
                android:layout_width="151dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/white_transparent_shape_background_8r"
                android:clickable="true"
                android:visibility="invisible"
                android:fontFamily="@font/inter_semi_bold"
                android:gravity="center_vertical"
                android:paddingStart="36dp"
                android:paddingEnd="0dp"
                android:text="@string/change_photo"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/choose_photo"
                app:layout_constraintStart_toEndOf="@+id/profile_picture" />

            <ImageView
                android:id="@+id/gallery_picture_1"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="12dp"
                android:visibility="invisible"
                android:clickable="true"
                android:contentDescription="@string/change_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/gallery_picture"
                app:layout_constraintBottom_toBottomOf="@+id/change_photo"
                app:layout_constraintStart_toStartOf="@+id/change_photo"
                app:layout_constraintTop_toTopOf="@+id/change_photo" />

            <TextView
                android:id="@+id/choose_photo"
                android:layout_width="151dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/white_transparent_shape_background_8r"
                android:clickable="true"
                android:fontFamily="@font/inter_semi_bold"
                android:gravity="center_vertical"
                android:paddingStart="36dp"
                android:paddingEnd="0dp"
                android:text="@string/choose_photo"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toTopOf="@+id/profile_picture" />

            <ImageView
                android:id="@+id/gallery_picture"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:clickable="true"
                android:contentDescription="@string/choose_photo"
                android:scaleType="centerCrop"
                android:layout_marginStart="12dp"
                android:src="@drawable/gallery_picture"
                app:layout_constraintBottom_toBottomOf="@+id/choose_photo"
                app:layout_constraintStart_toStartOf="@+id/choose_photo"
                app:layout_constraintTop_toTopOf="@+id/choose_photo" />

            <TextView
                android:id="@+id/delete_photo"
                android:layout_width="151dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/white_transparent_shape_background_8r"
                android:clickable="true"
                android:fontFamily="@font/inter_semi_bold"
                android:visibility="invisible"
                android:gravity="center_vertical"
                android:paddingStart="36dp"
                android:paddingEnd="0dp"
                android:text="@string/delete_photo"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toBottomOf="@+id/choose_photo" />

            <ImageView
                android:id="@+id/trash_picture"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="12dp"
                android:clickable="true"
                android:contentDescription="@string/delete_photo"
                android:visibility="invisible"
                android:scaleType="centerCrop"
                android:src="@drawable/trashcan"
                app:layout_constraintBottom_toBottomOf="@+id/delete_photo"
                app:layout_constraintStart_toStartOf="@+id/delete_photo"
                app:layout_constraintTop_toTopOf="@+id/delete_photo" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:labelFor="@+id/your_name"
                android:focusable="false"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/white_transparent_shape_background_8r"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/your_name"
                android:inputType="text|textNoSuggestions"
                android:textColor="@color/white"
                android:textColorHint="@color/white_light_transparent"
                android:textSize="16sp"
                android:paddingTop="14dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"/>

            <TextView
                android:id="@+id/about_yourself_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/about_yourself_field"
                android:text="@string/about_yourself"
                android:focusable="false"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/your_name"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"/>

            <EditText
                android:id="@+id/about_yourself_field"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:autofillHints="@null"
                android:background="@drawable/white_transparent_shape_background_8r"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/describe_yourself"
                android:inputType="textMultiLine|textNoSuggestions"
                android:textColor="@color/white"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:scrollHorizontally="false"
                android:textColorHint="@color/white_light_transparent"
                android:textSize="16sp"
                android:paddingTop="14dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:gravity="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_yourself_text"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"/>

            <TextView
                android:id="@+id/specify_interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:labelFor="@+id/chipGroup"
                android:focusable="false"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/specify_interests"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_yourself_field" />

            <com.example.itindr.ui.customView.TagListView
                android:id="@+id/tagListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/specify_interests"
                app:maxSelected="5"
                app:selectionMode="multi"
                app:tagCornerRadius="16dp"
                app:tagHorizontalPadding="12dp"
                app:tagNormalBackground="@color/white_transparent"
                app:tagNormalTextColor="@color/white"
                app:tagSelectedBackground="@color/white"
                app:tagSelectedTextColor="@color/black"
                app:tagSpacingHorizontal="8dp"
                app:tagSpacingVertical="8dp"
                app:tagTextFontFamily="@font/inter_bold"
                app:tagTextSize="14sp"
                app:tagVerticalPadding="4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>